[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.23"
bytemuck = { version = "1.14.1", features= ["derive"] }
env_logger = "0.11.1"
flume = "0.11.0"
pollster = "0.3.0"
wgpu = "0.19.1"
lazy_static = "1.4.0"
tokio = "1.36.0"

